MiniPythonParser.py
# Generated from MiniPython.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniPythonParser ( Parser ):

    grammarFileName = "MiniPython.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'if'", "'elif'", "'else'", 
                     "'and'", "'or'", "'not'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
                     "'+='", "'-='", "'*='", "'/='", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'!='", "'['", "']'", "','", "'('", 
                     "')'", "':'" ]

    symbolicNames = [ "<INVALID>", "NEWLINE", "IF", "ELIF", "ELSE", "AND", 
                      "OR", "NOT", "NAME", "NUMBER", "STRING", "PLUS", "MINUS", 
                      "STAR", "SLASH", "PERCENT", "EQ", "PLUSEQ", "MINUSEQ", 
                      "STAREQ", "SLASHEQ", "LT", "GT", "LTE", "GTE", "EQEQ", 
                      "NOTEQ", "LBRACK", "RBRACK", "COMMA", "LPAREN", "RPAREN", 
                      "COLON", "WS", "COMMENT" ]

    RULE_file_input = 0
    RULE_stmt = 1
    RULE_small_stmt = 2
    RULE_simple_stmt = 3
    RULE_compound_stmt = 4
    RULE_if_stmt = 5
    RULE_block = 6
    RULE_test = 7
    RULE_expr = 8
    RULE_or_test = 9
    RULE_and_test = 10
    RULE_not_test = 11
    RULE_comparison = 12
    RULE_comp_op = 13
    RULE_arith_expr = 14
    RULE_term = 15
    RULE_factor = 16
    RULE_atom = 17
    RULE_list_literal = 18
    RULE_assignment = 19
    RULE_assignment_op = 20

    ruleNames =  [ "file_input", "stmt", "small_stmt", "simple_stmt", "compound_stmt", 
                   "if_stmt", "block", "test", "expr", "or_test", "and_test", 
                   "not_test", "comparison", "comp_op", "arith_expr", "term", 
                   "factor", "atom", "list_literal", "assignment", "assignment_op" ]

    EOF = Token.EOF
    NEWLINE=1
    IF=2
    ELIF=3
    ELSE=4
    AND=5
    OR=6
    NOT=7
    NAME=8
    NUMBER=9
    STRING=10
    PLUS=11
    MINUS=12
    STAR=13
    SLASH=14
    PERCENT=15
    EQ=16
    PLUSEQ=17
    MINUSEQ=18
    STAREQ=19
    SLASHEQ=20
    LT=21
    GT=22
    LTE=23
    GTE=24
    EQEQ=25
    NOTEQ=26
    LBRACK=27
    RBRACK=28
    COMMA=29
    LPAREN=30
    RPAREN=31
    COLON=32
    WS=33
    COMMENT=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class File_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniPythonParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.StmtContext,i)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_input" ):
                listener.enterFile_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_input" ):
                listener.exitFile_input(self)




    def file_input(self):

        localctx = MiniPythonParser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1207967622) != 0):
                self.state = 42
                self.stmt()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(MiniPythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(MiniPythonParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(MiniPythonParser.Compound_stmtContext,0)


        def NEWLINE(self):
            return self.getToken(MiniPythonParser.NEWLINE, 0)

        def getRuleIndex(self):
            return MiniPythonParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = MiniPythonParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8, 9, 10, 11, 12, 27, 30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.simple_stmt()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.compound_stmt()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.match(MiniPythonParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Small_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(MiniPythonParser.AssignmentContext,0)


        def expr(self):
            return self.getTypedRuleContext(MiniPythonParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_small_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSmall_stmt" ):
                listener.enterSmall_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSmall_stmt" ):
                listener.exitSmall_stmt(self)




    def small_stmt(self):

        localctx = MiniPythonParser.Small_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_small_stmt)
        try:
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def small_stmt(self):
            return self.getTypedRuleContext(MiniPythonParser.Small_stmtContext,0)


        def NEWLINE(self):
            return self.getToken(MiniPythonParser.NEWLINE, 0)

        def getRuleIndex(self):
            return MiniPythonParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)




    def simple_stmt(self):

        localctx = MiniPythonParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_simple_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.small_stmt()
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 60
                self.match(MiniPythonParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stmt(self):
            return self.getTypedRuleContext(MiniPythonParser.If_stmtContext,0)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_compound_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stmt" ):
                listener.enterCompound_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stmt" ):
                listener.exitCompound_stmt(self)




    def compound_stmt(self):

        localctx = MiniPythonParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compound_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.if_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MiniPythonParser.IF, 0)

        def test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.TestContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.TestContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(MiniPythonParser.COLON)
            else:
                return self.getToken(MiniPythonParser.COLON, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.BlockContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.BlockContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(MiniPythonParser.ELIF)
            else:
                return self.getToken(MiniPythonParser.ELIF, i)

        def ELSE(self):
            return self.getToken(MiniPythonParser.ELSE, 0)

        def getRuleIndex(self):
            return MiniPythonParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)




    def if_stmt(self):

        localctx = MiniPythonParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(MiniPythonParser.IF)
            self.state = 66
            self.test()
            self.state = 67
            self.match(MiniPythonParser.COLON)
            self.state = 68
            self.block()
            self.state = 76
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 69
                    self.match(MiniPythonParser.ELIF)
                    self.state = 70
                    self.test()
                    self.state = 71
                    self.match(MiniPythonParser.COLON)
                    self.state = 72
                    self.block() 
                self.state = 78
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 79
                self.match(MiniPythonParser.ELSE)
                self.state = 80
                self.match(MiniPythonParser.COLON)
                self.state = 81
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(MiniPythonParser.NEWLINE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.StmtContext,i)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = MiniPythonParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(MiniPythonParser.NEWLINE)
            self.state = 86 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 85
                    self.stmt()

                else:
                    raise NoViableAltException(self)
                self.state = 88 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniPythonParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTest" ):
                listener.enterTest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTest" ):
                listener.exitTest(self)




    def test(self):

        localctx = MiniPythonParser.TestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_test)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def or_test(self):
            return self.getTypedRuleContext(MiniPythonParser.Or_testContext,0)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = MiniPythonParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.or_test()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Or_testContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def and_test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.And_testContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.And_testContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(MiniPythonParser.OR)
            else:
                return self.getToken(MiniPythonParser.OR, i)

        def getRuleIndex(self):
            return MiniPythonParser.RULE_or_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr_test" ):
                listener.enterOr_test(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr_test" ):
                listener.exitOr_test(self)




    def or_test(self):

        localctx = MiniPythonParser.Or_testContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_or_test)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.and_test()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 95
                self.match(MiniPythonParser.OR)
                self.state = 96
                self.and_test()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class And_testContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def not_test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.Not_testContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.Not_testContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(MiniPythonParser.AND)
            else:
                return self.getToken(MiniPythonParser.AND, i)

        def getRuleIndex(self):
            return MiniPythonParser.RULE_and_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd_test" ):
                listener.enterAnd_test(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd_test" ):
                listener.exitAnd_test(self)




    def and_test(self):

        localctx = MiniPythonParser.And_testContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_and_test)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.not_test()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 103
                self.match(MiniPythonParser.AND)
                self.state = 104
                self.not_test()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Not_testContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(MiniPythonParser.NOT, 0)

        def not_test(self):
            return self.getTypedRuleContext(MiniPythonParser.Not_testContext,0)


        def comparison(self):
            return self.getTypedRuleContext(MiniPythonParser.ComparisonContext,0)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_not_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot_test" ):
                listener.enterNot_test(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot_test" ):
                listener.exitNot_test(self)




    def not_test(self):

        localctx = MiniPythonParser.Not_testContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_not_test)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(MiniPythonParser.NOT)
                self.state = 111
                self.not_test()
                pass
            elif token in [8, 9, 10, 11, 12, 27, 30]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.comparison()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arith_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.Arith_exprContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.Arith_exprContext,i)


        def comp_op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.Comp_opContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.Comp_opContext,i)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)




    def comparison(self):

        localctx = MiniPythonParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.arith_expr()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 132120576) != 0):
                self.state = 116
                self.comp_op()
                self.state = 117
                self.arith_expr()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comp_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LT(self):
            return self.getToken(MiniPythonParser.LT, 0)

        def GT(self):
            return self.getToken(MiniPythonParser.GT, 0)

        def EQEQ(self):
            return self.getToken(MiniPythonParser.EQEQ, 0)

        def GTE(self):
            return self.getToken(MiniPythonParser.GTE, 0)

        def LTE(self):
            return self.getToken(MiniPythonParser.LTE, 0)

        def NOTEQ(self):
            return self.getToken(MiniPythonParser.NOTEQ, 0)

        def getRuleIndex(self):
            return MiniPythonParser.RULE_comp_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComp_op" ):
                listener.enterComp_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComp_op" ):
                listener.exitComp_op(self)




    def comp_op(self):

        localctx = MiniPythonParser.Comp_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_comp_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 132120576) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arith_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.TermContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.TermContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(MiniPythonParser.PLUS)
            else:
                return self.getToken(MiniPythonParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(MiniPythonParser.MINUS)
            else:
                return self.getToken(MiniPythonParser.MINUS, i)

        def getRuleIndex(self):
            return MiniPythonParser.RULE_arith_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArith_expr" ):
                listener.enterArith_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArith_expr" ):
                listener.exitArith_expr(self)




    def arith_expr(self):

        localctx = MiniPythonParser.Arith_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_arith_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.term()
            self.state = 131
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 127
                    _la = self._input.LA(1)
                    if not(_la==11 or _la==12):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 128
                    self.term() 
                self.state = 133
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.FactorContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.FactorContext,i)


        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(MiniPythonParser.STAR)
            else:
                return self.getToken(MiniPythonParser.STAR, i)

        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(MiniPythonParser.SLASH)
            else:
                return self.getToken(MiniPythonParser.SLASH, i)

        def PERCENT(self, i:int=None):
            if i is None:
                return self.getTokens(MiniPythonParser.PERCENT)
            else:
                return self.getToken(MiniPythonParser.PERCENT, i)

        def getRuleIndex(self):
            return MiniPythonParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = MiniPythonParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.factor()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 57344) != 0):
                self.state = 135
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 57344) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 136
                self.factor()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(MiniPythonParser.FactorContext,0)


        def PLUS(self):
            return self.getToken(MiniPythonParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(MiniPythonParser.MINUS, 0)

        def atom(self):
            return self.getTypedRuleContext(MiniPythonParser.AtomContext,0)

